tests/errors/syn_test_03_kwargs.py
def f(**x):
    return x+ y
